Added end to end CNN

--- a/Neural Network/TF-CNN-TRAFFIC-SIGN.ipynb
+++ b/Neural Network/TF-CNN-TRAFFIC-SIGN.ipynb
@@ -3880,9 +3880,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (tensorflow)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3894,7 +3894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
